[package]
name = "c-map"
version = "0.1.0"
edition = "2018"

description = "Very fast concurrent hashmap"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/c-map.rs"
license = "Apache-2.0"
keywords = ["concurrent", "hashmap"]

[dependencies]
parking_lot = "0.12"
num_cpus = "1"