[package]
name = "c-map"
version = "0.2.1"
edition = "2018"

description = "Very fast concurrent hashmap"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/c-map.rs"
license = "Apache-2.0"
keywords = ["concurrent", "hashmap"]

[features]
parking-lot = ["parking_lot"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
num_cpus = "1"